syntax = "proto3"; //协议版本号

option java_multiple_files = true;
option java_package = "io.grpc.add";
option java_outer_classname = "remote_add_service";

package Test; // 包名

//定义服务
service Greeter {
  //注意：这里是returns 不是return
  rpc RemoteAdd (AddRequest) returns (AddResponse) {}
}
//定义消息类型
message AddRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}
message AddResponse {
  int32 answer = 1;
}

